# synaptics-multimedia-pad

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.in  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: Makefile.am  Makefile.in  medion-multimedia.cfg.EXAMPLE
debian/: README  README.Debian  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  synaptics-multimedia-pad-default.ex  synaptics-multimedia-pad.doc-base.EX  watch.ex
doc/: Makefile.in
m4/: Makefile.am  Makefile.in
po/: POTFILES.in  de.gmo  de.po  fr.po  synaptics-multimedia-pad.pot
src/: Makefile.am  Makefile.in  alsa.c  alsa.h  audio.c  audio.h  common.h  conf.c  conf.h  config.c  config.h  gstreamer.c  gstreamer.h  onscr.c  onscr.h  syn-multimedia.c  syn.c  syn.h  synaptics_0_14_6.h  syntool.c  syntool.h
