INCLUDES = 
AM_LDFLAGS = 

bin_PROGRAMS = symultimediad
symultimediad_SOURCES = syn-multimedia.c synaptics.h \
			alsa.c alsa.h \
			syntool.c syntool.h \
			conf.c conf.h \
			onscr.c onscr.h \
			common.h
symultimediad_DEPENDENCIES = 
symultimediad_LDADD = -lm -lasound -lxosd -lpthread -lXext -lX11 -lXinerama
